# webdisplay

./: Cargo.toml  cert.pem  errors.txt  errors3.txt  errors_utf8.txt  errors_utf8_2.txt  key.pem
src/: main.rs
src/capture/: dda.rs  mod.rs
src/encode/: amf.rs  av1_amf.rs  mod.rs
src/input/: win32.rs
src/protocol/: frame.rs
src/server/: http.rs  tls.rs
src/transport/: mod.rs  session.rs  webrtc.rs  websocket.rs  webtransport.rs
web/: index.html  package-lock.json  package.json  player.js  vite.config.ts
web/src/: App.vue  player.js
