[package]
name = "webdisplay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
bitflags = "2.11.0"
bytes = "1.11.1"
env_logger = "0.11.9"
ffmpeg-next = "8.0.0"
futures-util = "0.3.32"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
tokio-rustls = "0.26.1"
rustls-pemfile = "2.2.0"
rcgen = "0.14.7"
